# PixelUI

./: CMakeLists.txt  vcpkg.json
cmake/: FindAllegro5.cmake
include/SparkyStudios/UI/Pixel/: Pixel.h
include/SparkyStudios/UI/Pixel/Config/: Config.h  Types.h
include/SparkyStudios/UI/Pixel/Core/: Application.h  Clipboard.h  Common.h  Log.h  MainWindow.h  Platform.h  Resource.h  Utility.h
include/SparkyStudios/UI/Pixel/Core/Animation/: Animation.h  HeightAnimation.h  SizeAnimation.h  WidthAnimation.h
include/SparkyStudios/UI/Pixel/Core/Events/: EventHandler.h  EventListener.h
include/SparkyStudios/UI/Pixel/Core/Input/: IInputEventListener.h  Keyboard.h  Mouse.h
include/SparkyStudios/UI/Pixel/Core/Renderer/: BaseRenderer.h  Skin.h
include/SparkyStudios/UI/Pixel/Graphics/: Color.h  Font.h  Point.h  Rect.h  Texture.h
include/SparkyStudios/UI/Pixel/Widgets/: Base.h  Button.h  Canvas.h  CheckBox.h  CollapsibleGroup.h  ComboBox.h  DraggableWidget.h  GroupBox.h  Image.h  Input.h  InputNumber.h  Label.h  MenuItem.h  ProgressBar.h  StatusBar.h  TextArea.h  Widget.h
include/SparkyStudios/UI/Pixel/Widgets/Containers/: CollapsibleItemsContainer.h  Menu.h  MenuStrip.h  ScrollContainer.h
include/SparkyStudios/UI/Pixel/Widgets/Shapes/: BaseShape.h  DownArrow.h  LeftArrow.h  Line.h  RightArrow.h  UpArrow.h
src/: main.cpp
src/Core/: Log.cpp  Resource.cpp  Utility.cpp
src/Core/Allegro5/: Application.cpp  Clipboard.cpp  Cursor.cpp  Log.cpp  MainWindow.cpp  Platform.cpp
src/Core/Allegro5/Input/: InputHandler.cpp  InputHandler.h  Mouse.cpp
src/Core/Allegro5/Renderer/: Renderer.cpp  Renderer.h
src/Core/Animation/: Animation.cpp  HeightAnimation.cpp  SizeAnimation.cpp  WidthAnimation.cpp
src/Core/Events/: EventHandler.cpp  EventListener.cpp
src/Core/Renderer/: BaseRenderer.cpp  Skin.cpp
src/Widgets/: Button.cpp  Canvas.cpp  CheckBox.cpp  CollapsibleGroup.cpp  ComboBox.cpp  DraggableWidget.cpp  GroupBox.cpp  Input.cpp  InputNumber.cpp  Label.cpp  MenuItem.cpp  ProgressBar.cpp  StatusBar.cpp  TextArea.cpp  Widget.cpp
src/Widgets/Containers/: CollapsibleItemsContainer.cpp  Menu.cpp  MenuStrip.cpp  ScrollContainer.cpp
src/Widgets/Shapes/: BaseShape.cpp  DownArrow.cpp  LeftArrow.cpp  Line.cpp  RightArrow.cpp  UpArrow.cpp
